kubepi/kubepi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubepi-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
  selector:
    app: kubepi
